Fixes horizontal scroll from search box

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -210,7 +210,7 @@ body {
 		// background: rgba(67,116,143,.85);
 		box-shadow: $level-one;
 		width: 100%;
-		padding: 1rem 3rem;
+		padding: 0 0 1rem;
 
 		p {
 			color: rgba(255,255,255,.9);
